@@ -27,11 +27,11 @@
   (list-ref net 0))
 (define (net:get-stop net)
   (list-ref net 1))
-(define (net:get-arc-start net)
-  (list-ref net 2))
 (define (net:get-aperture net)
-  (list-ref net 3))
+  (list-ref net 2))
 (define (net:get-interpolation net)
+  (list-ref net 3))
+(define (net:get-cirseg net)
   (list-ref net 4))
 
 (define (aperture:get-number aperture)
